<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">MusicPlayer</string>

    <string name="category_favorites">Favorites</string>
    <!-- Category name for phrases [CHAR LIMIT=20] -->
    <string name="category_pop">Pop</string>

    <!-- Category name for the vocabulary words for colors [CHAR LIMIT=20] -->
    <string name="category_country">Country</string>

    <!-- Category name for the vocabulary words for numbers [CHAR LIMIT=20] -->
    <string name="category_classic">Classic</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="category_rock">Rock</string>
    <string name="category_rb">RB</string>
    <string name="category_jazz">Jazz</string>

</resources>

