<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project

        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
        -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    android:orientation="vertical"
    tools:context="com.example.android.musicplayer.MainActivity">

    <TextView
        android:id="@+id/favorites"
        style="@style/CategoryStyle"
        android:background="@color/category_favorites"
        android:text="@string/category_favorites" />

    <TextView
        android:id="@+id/pop"
        style="@style/CategoryStyle"
        android:background="@color/category_pop"
        android:text="@string/category_pop" />

    <TextView
        android:id="@+id/country"
        style="@style/CategoryStyle"
        android:background="@color/category_country"
        android:text="@string/category_country" />

    <TextView
        android:id="@+id/rb"
        style="@style/CategoryStyle"
        android:background="@color/category_rb"
        android:text="@string/category_rb" />
    <TextView
        android:id="@+id/rock"
        style="@style/CategoryStyle"
        android:background="@color/category_rock"
        android:text="@string/category_rock" />
    <TextView
        android:id="@+id/jazz"
        style="@style/CategoryStyle"
        android:background="@color/category_rock"
        android:text="@string/category_jazz" />
    <TextView
        android:id="@+id/classic"
        style="@style/CategoryStyle"
        android:background="@color/category_classic"
        android:text="@string/category_classic" />

</LinearLayout>

